; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_pico.c_PicoFrameDrawOnly.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_pico.c_PicoFrameDrawOnly.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PicoAHW = common dso_local global i32 0, align 4
@PAHW_SMS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoFrameDrawOnly() #0 {
  %1 = load i32, i32* @PicoAHW, align 4
  %2 = load i32, i32* @PAHW_SMS, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = call i32 (...) @PicoFrameStart()
  %7 = call i32 @PicoDrawSync(i32 223, i32 0)
  br label %10

8:                                                ; preds = %0
  %9 = call i32 (...) @PicoFrameDrawOnlyMS()
  br label %10

10:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @PicoFrameStart(...) #1

declare dso_local i32 @PicoDrawSync(i32, i32) #1

declare dso_local i32 @PicoFrameDrawOnlyMS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
